fix: main container stretching to fill page
This commit fixes the issue where the container would stretch vertically to fill 95vh when the content inside was not enough to justify the length. This commit also adds functionality so that the container does limit itself to 95vh when the height of the window is less than the height of the container. However, the current method of doing this is very manual, and will need updating when more content is added to the main panel.

--- a/portfolio-client/src/app/(pages)/home/page.module.css
+++ b/portfolio-client/src/app/(pages)/home/page.module.css
@@ -16,7 +16,7 @@
   grid-row-start: 2;
   padding: 20px;
   z-index: 10;
-  height: 95dvh;
+  /*height: 95dvh;*/
   overflow-y: scroll;
 
   /* Remove scrollbar from Firefox & Edge browsers*/
@@ -32,6 +32,12 @@
 @media (max-width: 600px) {
   .dual_column {
     flex-direction: column;
+  }
+}
+
+@media (max-height: 1070px) {
+  .content {
+    height: 95dvh;
   }
 }
 
